src/assets/less/critical.less
/*-- -------------------------- -->
<---           Hero             -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #hero-143 {
        /* Centers button */
        text-align: center;
        /* 144px - 300px - leaving extra space for the navigation */
        padding: clamp(12rem, 25.95vw, 18.75rem) (16/16rem) 0;
        /* 130px - 450px */
        padding-bottom: clamp(12.125rem, 30.95vw, 28.125rem);
        background: linear-gradient(90deg, rgba(13, 96, 165, 1) 0%, rgba(162, 229, 247, 1) 100%);
        position: relative;
        z-index: 1;
        border: none;
        /* Prevents white rectangle pseudos from overlapping the sections below */
        overflow: hidden;

        /* SVG Wave Styling */
        .custom-shape-divider-bottom-1723321338 {
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100%;
            overflow: hidden;
            line-height: 0;
        }

        .custom-shape-divider-bottom-1723321338 svg {
            position: relative;
            display: block;
            width: calc(100% + 600px);
            height: 250px;
        }

        .custom-shape-divider-bottom-1723321338 .shape-fill {
            fill: #FFFFFF;
            transition: fill 0.3s;
        }

        .cs-container {
            width: 100%;
            max-width: (1280/16rem);
            margin: auto;
        }

        .cs-title {
            /* 39px - 61px */
            font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
            font-weight: 700;
            line-height: 1.2em;
            text-align: center;
            max-width: (829/16rem);
            /* 16px - 24px */
            margin: 0 auto clamp(1rem, 4vw, 1.5rem);
            color: #fff;
            position: relative;

            &:after {
                /* Divider Line */
                content: "";
                /* 60px - 100px */
                width: clamp(3.75rem, 9.5vw, 6.25rem);
                /* 4px - 8px */
                height: clamp(0.25rem, 0.8vw, 0.5rem);
                /* 16px - 24px */
                margin: clamp(1rem, 4vw, 1.5rem) auto clamp(1rem, 4vw, 1.5rem);
                background: var(--primaryDark);
                border-radius: 20px;
                opacity: 1;
                position: relative;
                display: block;
            }
        }

        .cs-text {
            /* 16px - 25px */
            font-size: clamp(1rem, 1.95vw, 1.5625rem);
            line-height: 1.5em;
            text-align: center;
            width: 100%;
            /* 464px - 800px */
            max-width: clamp(29rem, 60vw, 40rem);
            margin: 0 auto;
            /* 40px - 48px */
            margin-bottom: clamp(2.5rem, 4vw, 3rem);
            color: #fff;
        }
    }
}

/* Desktop - 1300px (To make image background parallax) */
@media only screen and (min-width: 81.25rem) {
    #hero-143 {
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        /* makes the parallax effect */
        background-attachment: fixed;

        .cs-background {
            img {
                display: none;
            }
        }

        .cs-title {
            font-size: clamp(2.4375rem, 10vw, 5rem);
        }
    }

    .custom-shape-divider-bottom-1723321338 svg {
        width: calc(100% + 1.3px);
        height: 142px;
    }
}

/* Dark Mode */
@media only screen and (min-width: 0rem) {
    body.dark-mode {


        #hero-143 {
            background: linear-gradient(90deg, rgba(7, 48, 101, 1) 0%, rgba(162, 229, 247, 1) 100%);

            .custom-shape-divider-bottom-1723321338 .shape-fill {
                fill: var(--dark);
            }

            .cs-title,
            .cs-text,
            .cs-button-4 {
                color: var(--bodyTextColorWhite);
            }

            .cs-title:after {
                background-color: var(--primary);
            }


        }
    }
}
/* ... */

